# claude-managed-agents-tensorlake-sandbox

./: .gitignore  .pre-commit-config.yaml  README.md
examples/managed-agent/: .env.example  .env.local.example  Makefile  README.md  pyproject.toml  pyrightconfig.json
examples/managed-agent/src/: claude_webhook_handler.py  config.py  create_agent.py  drive_session.py  host_orchestrator_polling.py  launch_webhook_sandbox.py  orchestrator_lib.py  sandbox_entrypoint.py  sandbox_image.py  webhook_sandbox_image.py
examples/parallel-sub-agents/: .env.example  README.md  pyproject.toml
examples/parallel-sub-agents/src/: demo.py  parallel.py
