[project]
name = "claude-managed-agents-tensorlake"
version = "0.1.0"
description = "Claude Managed Agents on Tensorlake Sandboxes: host (webhook/polling) and serverless (Application + cron) orchestrator modes"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic[webhooks]>=0.103.0",
    "dotenv>=0.9.9",
    "fastapi>=0.136.1",
    "tensorlake>=0.2",
    "uvicorn>=0.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
sources = ["src"]
only-include = ["src/config.py", "src/orchestrator_lib.py", "src/orchestrator_app.py"]
