[project]
name = "claude-managed-agents-tensorlake-parallel-sub-agents"
version = "0.1.0"
description = "Fork-from-snapshot demo: one sandbox forks N children for parallel exploration"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "tensorlake>=0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
sources = ["src"]
only-include = ["src/parallel.py", "src/demo.py"]
